# RoboPay

./: .gitignore  DESCRICAO_DA_PR.txt  Makefile  PR_DESCRIPTION.md  PR_DESCRIPTION.txt  README.md  REVIEWER_E2E_TUTORIAL.txt  REVIEWER_PAYMENT_GUARANTEES.txt  go.mod  go.sum  main.go  test_zenoh_loop.py  webots_spot_controller.py
.github/workflows/: agibot-x2-bridge.yml  base-sepolia-e2e.yml  ci.yml  (+2 more)
bridge/agibot/x2/mujoco_bridge/: README.md  package.xml  setup.cfg  setup.py
bridge/agibot/x2/mujoco_bridge/config/: params.yaml
bridge/agibot/x2/mujoco_bridge/launch/: bridge.launch.py
bridge/agibot/x2/mujoco_bridge/test/: test_event.py  test_mapper.py
bridge/agibot/x2/mujoco_bridge/x2/: __init__.py  mapper.py  node.py  simulator.py
bridge/deep_robotics/x30_pro/isaac_sim_bridge/: package.xml  setup.cfg  setup.py
bridge/deep_robotics/x30_pro/isaac_sim_bridge/config/: default.yaml
bridge/deep_robotics/x30_pro/isaac_sim_bridge/launch/: isaac_sim_bridge.launch.py
bridge/deep_robotics/x30_pro/isaac_sim_bridge/test/: test_x30_pro_skills.py  test_x30_pro_validation.py
bridge/deep_robotics/x30_pro/isaac_sim_bridge/x30_pro/: __init__.py  mapper.py  node.py
bridge/deep_robotics/x30_pro/isaac_sim_bridge/x30_pro/skills/: __init__.py  base.py  manager.py  obstacle_nav.py
cmd/: main.go
config/: config.go
internal/: client.go  client_test.go  router.go
scripts/: pay_action.py
simulation/: .gitignore  README.md  setup.sh
tests/: test_robopay_bridge.py
tunnel/: .env.example  client.go  client_test.go  config.json  go.mod  go.sum  router.go
(+358 files in other folders)
