<?xml version="1.0"?>
<package format="3">
  <name>mujoco_bridge_agibot_x2</name><version>0.1.0</version>
  <description>RoboPay Zenoh bridge and MuJoCo adapter for AGIBot X2 simulation.</description>
  <maintainer email="maintainers@example.com">RoboPay contributors</maintainer><license>Apache-2.0</license>
  <depend>rclpy</depend><depend>geometry_msgs</depend><exec_depend>zenoh_bridge</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
